--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,14 +15,14 @@ allprojects {
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "nl.xs4all.pebbe.cubetalk"
         minSdkVersion 19
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0.0"
+        targetSdkVersion 27
+        versionCode 2
+        versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -36,13 +36,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-    testCompile 'junit:junit:4.12'
-    compile 'com.google.vr:sdk-audio:1.10.0'
-    compile 'com.google.vr:sdk-base:1.10.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha1'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.google.vr:sdk-audio:1.10.0'
+    implementation 'com.google.vr:sdk-base:1.10.0'
 }
